force-app/main/default/objects/Inventory_Purchase__c/Inventory_Purchase__c.object-meta.xml
<CustomObject>
    <description>record of inventory purchase</description>
    <label>Inventory PO</label>
    <nameField>
        <displayFormat>INV-PO-{0000000}</displayFormat>
        <label>Inventory PO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>