force-app/main/default/objects/Inventory_Purchase__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory POs</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>