force-app/main/default/objects/Inventory_Purchase__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <description>Date Order Placed</description>
    <inlineHelpText>Date Order Placed</inlineHelpText>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>