force-app/main/default/objects/Inventory_Purchase__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8 Marc Dr</fullName>
            </value>
            <value>
                <fullName>53 Route 34</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
            <value>
                <fullName>Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>