force-app/main/default/objects/Inventory_Purchase__c/fields/Delivery_Reciever__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Reciever__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who needs to be present to receive the delivery</inlineHelpText>
    <label>Personnel to Receive Delivery</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>