force-app/main/default/objects/Inventory_Purchase__c/fields/Earliest_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Delivery_Time__c</fullName>
    <description>Earliest Delivery Time of Delivery Window</description>
    <inlineHelpText>Earliest Delivery Time of Delivery Window</inlineHelpText>
    <label>Earliest Delivery Time</label>
    <type>DateTime</type>
</CustomField>