force-app/main/default/objects/Inventory_Purchase__c/fields/Equipment_Item__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Inventory POs</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>