force-app/main/default/objects/Inventory_Purchase__c/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>&quot;&apos;Unit(s) Ordered Description&apos; needs to be the BASE UNIT from the Inventory record.&quot;</defaultValue>
    <label>IMPORTANT</label>
    <type>TextArea</type>
</CustomField>