force-app/main/default/objects/Inventory_Purchase__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipLabel>Inventory POs</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>