force-app/main/default/objects/Inventory_Purchase__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Inventory POs</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>