force-app/main/default/objects/Inventory_Purchase__c/fields/Latest_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Delivery_Time__c</fullName>
    <description>Latest Delivery Time of Delivery Window</description>
    <inlineHelpText>Latest Delivery Time of Delivery Window</inlineHelpText>
    <label>Latest Delivery Time</label>
    <type>DateTime</type>
</CustomField>