force-app/main/default/objects/Inventory_Purchase__c/fields/Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Details__c</fullName>
    <label>Order Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>