force-app/main/default/objects/Inventory_Purchase__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC#0194</fullName>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Amex 7894</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>