force-app/main/default/objects/Inventory_Purchase__c/fields/Presence_Needed_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Presence_Needed_for_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presence Needed for Delivery</label>
    <type>Checkbox</type>
</CustomField>