force-app/main/default/objects/Inventory_Purchase__c/fields/Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ordered__c</fullName>
    <label>Quantity Ordered</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>