force-app/main/default/objects/Inventory_Purchase__c/fields/Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested__c</fullName>
    <label>Quantity Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>