force-app/main/default/objects/Inventory_Purchase__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order Delivered and Received Well</description>
    <inlineHelpText>Order Delivered and Received Well</inlineHelpText>
    <label>Received</label>
    <type>Checkbox</type>
</CustomField>