force-app/main/default/objects/Inventory_Purchase__c/fields/Receiving_Stage__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Stage__c</fullName>
    <label>Receiving Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Back-Ordered</fullName>
                <isActive>false</isActive>
                <label>Back-Ordered</label>
            </value>
            <value>
                <fullName>Staging Area</fullName>
                <isActive>false</isActive>
                <label>Staging Area</label>
            </value>
            <value>
                <fullName>Stored</fullName>
                <isActive>false</isActive>
                <label>Stored</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>