force-app/main/default/objects/Inventory_Purchase__c/fields/Supplier_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order_No__c</fullName>
    <description>Order number received from supplier</description>
    <inlineHelpText>Order number received from supplier</inlineHelpText>
    <label>Supplier Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>