force-app/main/default/objects/Inventory_Purchase__c/fields/Units_Ordered_Description__c.field-meta.xml
<CustomField>
    <fullName>Units_Ordered_Description__c</fullName>
    <description>Description of the unit that matches the quantity ordered, ie 1 box of 6</description>
    <inlineHelpText>Description of the unit that matches the quantity ordered, ie 1 box of 6</inlineHelpText>
    <label>Unit(s) Ordered Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>