force-app/main/default/objects/Inventory_Purchase__c/fields/WO_Part_PO__c.field-meta.xml
<CustomField>
    <fullName>WO_Part_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO Part PO</label>
    <referenceTo>WO_Part__c</referenceTo>
    <relationshipLabel>Inventory POs</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>