force-app/main/default/objects/Inventory_Purchase__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TrackIT__Work_Order__c.TrackIT__Completed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TrackIT__Work_Order__c</referenceTo>
    <relationshipLabel>Parts Ordered</relationshipLabel>
    <relationshipName>Inventory_POs</relationshipName>
    <type>Lookup</type>
</CustomField>