force-app/main/default/objects/Inventory_Purchase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Ordered__c</columns>
    <columns>Earliest_Delivery_Time__c</columns>
    <columns>Latest_Delivery_Time__c</columns>
    <columns>Delivery_Location__c</columns>
    <columns>Presence_Needed_for_Delivery__c</columns>
    <columns>Cost__c</columns>
    <columns>Order_Details__c</columns>
    <columns>Receiving_Stage__c</columns>
    <columns>Inventory__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>